# snippets

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: user-experience.md
src/snippets/assets/: snippets-schema.json  snippets-validator.py
src/snippets/cli/: __init__.py  add.py  clean.py  init.py  main.py
src/snippets/sdk/decorators/: sluggen.py  titlegen.py
tests/: test_add.py  test_init.py  test_main.py
